--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "body-parser": "latest",
-    "express": "latest",
-    "nodemon": "latest",
-    "path": "^0.12.7",
-    "mongoose": "latest",
     "bcrypt": "latest",
+    "body-parser": "latest",
     "connect-mongo": "latest",
-    "express-session": "latest"
+    "express": "latest",
+    "express-session": "latest",
+    "jade": "^1.11.0",
+    "mongoose": "latest",
+    "nodemon": "latest",
+    "path": "^0.12.7"
   }
 }
